fixed the gap between navbar and hero

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   border: 1px solid turquoise;
   padding: 2px 8px;
   border-radius: 3px;
+  margin-right: 10px;
 }
 
 .card-title{
